Fix Menu jump link @ 768

--- a/src/assets/css/_partials/header.scss
+++ b/src/assets/css/_partials/header.scss
@@ -39,7 +39,7 @@
       color: palette(claret);
     }
 
-    @media (min-width: 1024px) {
+    @media (min-width: 768px) {
       position: absolute;
       right: -100%;
     }
